--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,9 @@
     "name": "${pluginName}",
     "entry": "${pluginFile}",
     "type": "native",
+    "author": "author",
+    "description": "description",
+    "version": "0.0.0",
     "dependencies": [
         {
             "name": "GMLIB"
